tests/negative/declare_diff_sign.fc
// test: declare-with-different-signature-test
// compile-fail: true
// exit-code: 1

void exit(int _);

int foo(bool arg);
int foo(int arg);

void main(){
    exit(0);
}

